--- a/.travis.yml
+++ b/.travis.yml
@@ -2,9 +2,9 @@ sudo: false
 dist: trusty
 language: python
 python:
-    - 3.5        # currently Travis trusty default Python3 is 3.5.2
-    - 3.6.1
-    - "nightly"  # currently points to 3.7-dev (3.7.0a0)
+    - 3.5         # currently Travis trusty default Python3 is 3.5.2
+    #- 3.6.1
+    #- "nightly"  # currently points to 3.7-dev (3.7.0a0)
 install:
     - pip install flake8 pytest
 before_script:
