--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ before_script:
     # stop the build if there are Python syntax errors or undefined names
     - flake8 . --count --select=E901,E999,F821,F822,F823 --statistics
     # exit-zero treates all errors as warnings.  The GitHub editor is 127 chars wide
-    - flake8 . --count --exit-zero --max-line-length=127 --statistics
+    - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 script:
     pytest --capture=sys
     # python unittest.py
