--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "pokemon-terminal",
-  "version": "1.0.2",
+  "version": "1.0.7",
   "description": "Pokemon terminal themes",
   "bin": {
-    "pokemon": "main.py"
+    "pokemon": "pokemon",
+    "ichooseyou": "pokemon"
   },
   "scripts": {},
   "repository": {
