--- a/.travis.yml
+++ b/.travis.yml
@@ -1,13 +1,11 @@
 language: python
-python:
-    - 3.6
+dist: xenial  # required for Python >= 3.7 (travis-ci/travis-ci#9069)
+python: 3.7
 cache: pip
-install:
-    - pip install --editable .
-    - pip install flake8 pytest
+install: pip install flake8 pytest --editable .
 before_script:
     # stop the build if there are Python syntax errors or undefined names
-    - flake8 . --count --select=E901,E999,F821,F822,F823 --show-source --statistics
+    - flake8 . --count --select=E9,F63,F72,F82 --show-source --statistics
     # exit-zero treates all errors as warnings.  The GitHub editor is 127 chars wide
     - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
 script:
